JVM 新生代设置2。